fix(@clayui/css): Forms .form-control-select with long text shouldn't break to new line and should have overflow ellipsis, similar behavior to select.form-control
fix(@clayui/css): Forms .form-control-select.form-control-sm should have space on the right for the double-caret-l icon

issue #4206

--- a/packages/clay-css/src/scss/cadmin/components/_forms.scss
+++ b/packages/clay-css/src/scss/cadmin/components/_forms.scss
@@ -341,6 +341,18 @@ select.form-control {
 
 .form-control-select {
 	@include clay-css($cadmin-form-control-select);
+
+	&:hover {
+		$hover: setter(map-get($cadmin-form-control-select, hover), ());
+
+		@include clay-css($hover);
+	}
+
+	&:focus {
+		$focus: setter(map-get($cadmin-form-control-select, focus), ());
+
+		@include clay-css($focus);
+	}
 }
 
 select.form-control[size] {
@@ -604,11 +616,17 @@ textarea.form-control-lg,
 }
 
 %clay-select-form-control-sm {
-	height: $cadmin-input-height-sm;
+	@include clay-css(setter($cadmin-form-control-select-sm, ()));
 
 	@include clay-scale-component {
-		height: $cadmin-input-height-sm-mobile;
+		$mobile: setter(map-get($cadmin-form-control-select-sm, mobile), ());
+
+		@include clay-css($mobile);
 	}
+}
+
+.form-control-select.form-control-sm {
+	@extend %clay-select-form-control-sm !optional;
 }
 
 %clay-textarea-form-control-sm {
