--- a/packages/clay-css/src/scss/cadmin/variables/_forms.scss
+++ b/packages/clay-css/src/scss/cadmin/variables/_forms.scss
@@ -607,10 +607,29 @@ $cadmin-form-control-select: map-deep-merge(
 			(
 				appearance: null,
 				cursor: null,
+				overflow: hidden,
+				text-overflow: ellipsis,
+				white-space: nowrap,
+				hover: (
+					color: inherit,
+					text-decoration: none,
+				),
 			)
 		)
 	),
 	$cadmin-form-control-select
+);
+
+$cadmin-form-control-select-sm: () !default;
+$cadmin-form-control-select-sm: map-deep-merge(
+	(
+		height: $cadmin-input-height-sm,
+		padding-right: 2em,
+		mobile: (
+			height: $cadmin-input-height-sm-mobile,
+		),
+	),
+	$cadmin-form-control-select-sm
 );
 
 // Select Size
