--- a/packages/clay-css/src/scss/components/_forms.scss
+++ b/packages/clay-css/src/scss/components/_forms.scss
@@ -337,6 +337,18 @@ select.form-control {
 
 .form-control-select {
 	@include clay-css($form-control-select);
+
+	&:hover {
+		$hover: setter(map-get($form-control-select, hover), ());
+
+		@include clay-css($hover);
+	}
+
+	&:focus {
+		$focus: setter(map-get($form-control-select, focus), ());
+
+		@include clay-css($focus);
+	}
 }
 
 select.form-control[size] {
@@ -600,11 +612,17 @@ textarea.form-control-lg,
 }
 
 %clay-select-form-control-sm {
-	height: $input-height-sm;
+	@include clay-css(setter($form-control-select-sm, ()));
 
 	@include clay-scale-component {
-		height: $input-height-sm-mobile;
+		$mobile: setter(map-get($form-control-select-sm, mobile));
+
+		@include clay-css($mobile);
 	}
+}
+
+.form-control-select.form-control-sm {
+	@extend %clay-select-form-control-sm !optional;
 }
 
 %clay-textarea-form-control-sm {
